--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -432,7 +432,12 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Online Library. All rights reserved.</p>
             </div>
+            <a href="#" class="scroll-top">
+                <i class="fas fa-arrow-up"></i>
+            </a>
         </footer>
+        <script src="./../Script/footer.js"></script>
+
         <div id="book-modal" class="modal hidden">
             <div class="modal-content">
                 <span class="close-btn">&times;</span>
@@ -451,4 +456,5 @@
         <script src="./../Script/modal.js"> </script>
         <script src="./../Script/header.js"></script>
     </body>
+
 </html>
