--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -213,7 +213,11 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Online Library. All rights reserved.</p>
             </div>
+            <a href="#" class="scroll-top">
+                <i class="fas fa-arrow-up"></i>
+            </a>
         </footer>
+        <script src="./../Script/footer.js"></script>
         <script src="./../Script/header.js"></script>
         <script src="./../Script/user_dashboard.js"></script>
     </body>
