--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -556,6 +556,10 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Online Library. All rights reserved.</p>
             </div>
+            <a href="#" class="scroll-top">
+                <i class="fas fa-arrow-up"></i>
+            </a>
         </footer>
+        <script src="./../Script/footer.js"></script>
     </body>
 </html>
