--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./../CSS/forms-style.css">
-    <title>Online-library</title>
-</head>
-<body>
-    <section class="sign-up">
-        <form >
-            <div class="logo">
-                <i class="fas fa-book-open"></i>
-                <span style="color: var(--text-color);">Online Library</span>
-            </div>
-            <h2>Sign-Up</h2>
-            <div class="field">
-                <div class="field-heading">
-                    <i class="fa-solid fa-user"></i>
-                    <label for="username">Username</label>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+            integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./../CSS/forms-style.css">
+        <title>Online-library</title>
+    </head>
+    <body>
+        <section class="sign-up">
+            <form>
+                <div class="logo">
+                    <i class="fas fa-book-open"></i>
+                    <span style="color: var(--text-color);">Online
+                        Library</span>
                 </div>
-                <input class="input" type="text" id="username" name="username" placeholder="Enter username" required>
-            </div>
-            <div class="field">
-                <div class="field-heading">
-                    <i class="fa-solid fa-lock"></i>
-                    <label for="password">password</label>
+                <h2>Sign-Up</h2>
+                <div class="field">
+                    <div class="field-heading">
+                        <i class="fa-solid fa-user"></i>
+                        <label for="username">Username</label>
+                    </div>
+                    <input class="input" type="text" id="username"
+                        name="username" placeholder="Enter username" required>
                 </div>
-                <input class="input" type="password" id="password" name="password" placeholder="Enter password" required>
-            </div>
-            <div class="field">
-                <div class="field-heading">
-                    <i class="fa-solid fa-pencil"></i>
-                    <label for="pass-confirm">Confirm password</label>
+                <div class="field">
+                    <div class="field-heading">
+                        <i class="fa-solid fa-lock"></i>
+                        <label for="password">Password</label>
+                    </div>
+                    <div class="password-field">
+                        <input class="input" type="password" id="password"
+                            name="password" placeholder="Enter password"
+                            required>
+                        <button type="button" class="password-toggle">
+                            <i class="fa-solid fa-eye"></i>
+                        </button>
+                    </div>
                 </div>
-                <input class="input" type="password" id="pass-confirm" name="pass-confirm" placeholder="Confirm password" required>
-            </div>
-            <div class="field">
-                <div class="field-heading">
-                    <i class="fa-solid fa-envelope"></i>
-                    <label for="email">Email</label>
-                </div>
-                <input class="input" type="email" id="email" name="pass-confirm" placeholder="Enter email" required>
-            </div>
-            <button type="submit">Sign up</button>
-            <a class="cancel-button" href="./../../index.html">Cancel</a>
-            <div class="sign-in">
-                <span>Already have an account ?</span>
-                <a href="./sign-in.html">Sign in</a>
-            </div>
-        </form>
-        <img src="./../CSS/assets/woman-reading-chair.png" alt="man reading a book">
-    </section>
 
-</body>
+                <div class="field">
+                    <div class="field-heading">
+                        <i class="fa-solid fa-pencil"></i>
+                        <label for="pass-confirm">Confirm password</label>
+                    </div>
+                    <div class="password-field">
+                        <input class="input" type="password" id="pass-confirm"
+                            name="pass-confirm" placeholder="Confirm password"
+                            required>
+                        <button type="button" class="password-toggle">
+                            <i class="fa-solid fa-eye"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="field-heading">
+                        <i class="fa-solid fa-envelope"></i>
+                        <label for="email">Email</label>
+                    </div>
+                    <input class="input" type="email" id="email"
+                        name="pass-confirm" placeholder="Enter email" required>
+                </div>
+                <button type="submit">Sign up</button>
+                <a class="cancel-button" href="./../../index.html">Cancel</a>
+                <div class="sign-in">
+                    <span>Already have an account ?</span>
+                    <a href="./sign-in.html">Sign in</a>
+                </div>
+            </>
+            <img src="./../CSS/assets/woman-reading-chair.png"
+                alt="man reading a book">
+        </section>
+
+    </body>
+    <script src="./../Script/Forms_validation.js"></script>
 </html>
